Erratic tilt direction with pen/tablet inputs
Affected Version
OS: Arch Linux GNOME 40.4.0 mutter 40.5-1
Bug Summary
When I use a pen/tablet device with tilt support, the tilt direction appears unstable and erratic on GNOME Wayland (see attached image). The tilt works properly with Sway window manager or GNOME Xorg. Also, I could reproduce the issue on different machines with different pen/tablet devices (Wacom Cintiq and Lenovo AES Pen). It doesn't seem to matter what graphics program I use; Krita, GIMP, and MyPaint are all affected in the same way. I haven't changed any pen/tablet settings through GNOME settings, xsetwacom, etc.
I thought the problem was related to a libinput bug I reported a while back, but some debugging indicated the erratic tilt was likely a separate mutter bug. Here's a link to that conversation: https://gitlab.freedesktop.org/libinput/libinput/-/issues/632#note_997666.
I know the problem started after an update earlier this year, but unfortunately I can't remember how many months ago that was.
Steps to Reproduce
- Log into a GNOME Wayland session
- Open a graphics editor (e.g. Krita) and select a brush that uses tilt
- Draw on the canvas.
For systems without pen input, I made a recording of the input
events when I drew the attached example image using libinput record
,
which can be replayed with sudo libinput replay erratic-tilt.yml
.
What happened
The tilt direction appears to flip around erratically.
What did you expect to happen
The tilt direction should reflect the actual orientation of the stylus.